lib/src/compiler/tests/testdata/errors/43.out
error[E112]: invalid regular expression
 --> line:3:10
  |
3 |     $a = /(foo|)/
  |          ^^^^^^^^ this regexp can match empty strings
  |